  * [RSRParsers] Removed attribute sistem from RSRParser  
  * [RSRParsers] Added grave accent(`) char as a delimiter to not split tge RSR value
  * [RSRParsers] Moved RSRFilter from RSRParsers to the *rsr FilterS
  * [SessionS] Rename from ResourceMessage to ResourceAllocation
  * [LoaderS] Updated file selector from *req<FileName> to *file(FileName)
  * [SessionS] Added *chargers flag to ProcessEvent to proccess the events from ChargerS with other subsystems
  * [SessionS] Updated the ids handling in flags by adding *ids as a new flag
  * [SessionS] Added *derived_reply sub flag to ProcessEvent to specify if a subsystem needs to process the events from ChargerS
  * [Templates] Added new dataconverter: *string2hex
  * [AttributeS] Updated AttributeProfile matching to match the second AttributeProfile with the same weight
  * [AttributeS] Updated inline AttributeProfiles to unite all consecutive inline attributes in a single profile 
  * [SessionS] Added *processRuns option to control the process runs for AttributeS
  * [DispatcherS] Removed ArgDispatcher in favor of Opts

 -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100